react/src/components/atoms/forms/Input/style.scss
@import 'global';


.ma__input-group {
  &--inline {
    display: flex;
      flex-direction: row;
      align-items: flex-start;
      justify-content: space-between;
      @media ($bp-small-max) {
      	flex-direction: column;
      }
  }
}

// error message
.ma__input-error-msg {
  font-size: 1.125rem;
  line-height: 1.75rem;
  margin-bottom: .5em;

  color: $c-font-error;
  font-weight: 500;

  &--success {
    color: $c-primary-alt !important;
  }

  &.has-error {
    display: flex !important;
    align-items: center;
  }
}

%disabled {
  opacity: 0.5;
}

input:disabled {
  @extend %disabled;
  background-color: $c-gray-lightest;
}

button:disabled {
  @extend %disabled;
  &:before, &:after {
    @extend %disabled;
  }
}

.ma__label {
  &--disabled {
    @extend %disabled;
  }
}

